--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-scripts": "^3.4.3"
-  },
-  "devDependencies": {
-    "typescript": "3.8.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
